# PodcastAI

./: README.md
backend/: .env.example  Cargo.toml
backend/src/api/: mod.rs  openapi.json  routes.rs
backend/src/api/controllers/: tweet_controller.rs
backend/src/api/models/: tweet.rs
backend/src/api/services/: mod.rs  tweet_service.rs
src/: main.rs
src/api/: routes.rs
src/api/controllers/: mod.rs
src/api/models/: tweet.rs
