[package]
name = "amplify"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.46.1"
urlencoding = "2.1.3"
regex = "1.10.3"
